LDEV-4054: Updating translations
Translating English and Greek

--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:29 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:41:17 CST 2017 
  
 #=================== labels for Google Maps =================# 
 
@@ -105,6 +105,7 @@ button.placeMarker  =Place marker
 label.nogroups  =No groups found for activity.
 button.submit  =Finish
 label.activity.completion  =End of activity
+label.show.on.map  =Show on map
 
 
-#======= End labels: Exported 99 labels for en AU =====
+#======= End labels: Exported 100 labels for en AU =====
