--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:30 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:41:16 CST 2017 
  
 #=================== labels for Google Maps =================# 
 
@@ -105,6 +105,7 @@ button.placeMarker  =\u03a4\u03cc\u03c0\u03bf\u03c2 \u03c3\u03ae\u03bc\u03b1\u03
 label.nogroups  =\u0394\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b1\u03bd \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1.
 button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+label.show.on.map  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03c3\u03c4\u03bf \u03c7\u03ac\u03c1\u03c4\u03b7
 
 
-#======= End labels: Exported 99 labels for el GR =====
+#======= End labels: Exported 100 labels for el GR =====
