--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:26:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:43:50 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -313,6 +313,9 @@ label.marks  =Marks
 label.number.learners.in.mark.range  =Number of learners in mark range
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
+label.error  =Error
+error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
+label.ok  =OK
 
 
-#======= End labels: Exported 307 labels for en AU =====
+#======= End labels: Exported 310 labels for en AU =====
