LDEV-4054: Updating translations
Updating English, Greek and Norwegian

--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 18 00:47:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:44:55 CST 2017 
  
 #=================== labels for Leader selection =================# 
 
@@ -45,7 +45,7 @@ textsearch.phrase  =tiene esta palabra o frase exactamente:
 textsearch.any.words  =tiene una o m\u00e1s de estas palabras:
 output.desc.all.users.entries.definition.notebook  =La entrada de cada alumno en la Selecci\u00f3n de L\u00edder
 output.desc.user.is.leader  =\u00bfEs estudiante un l\u00edder?
-label.group.leader  =L\u00edder del Grupo: {0}
+label.group.leader  =L\u00edder del Grupo:
 label.are.you.going.to.be.leader  =\u00bfVas a ser el l\u00edder de este grupo?
 label.leader.selection  =Selecci\u00f3n de l\u00edder
 label.users.from.group  =Estudiantes en el grupo:
@@ -55,7 +55,7 @@ label.refresh  =Actualizar
 label.waiting.for.leader  =Por favor, espera mientras alguien se convertir\u00e1 en l\u00edder del grupo.
 label.manage.leaders  =Gestione l\u00edderes
 label.plese.select.leaders  =Por favor, elija l\u00edderes
-heading.leader  =L\u00edder del Grupo
+heading.leader  =L\u00edder del grupo: {0}
 monitoring.label.group  =Grupo
 label.no.leader.yet.title  =No se ha seleccionado l\u00edder
 label.no.leader.yet.body  =Una vez que el l\u00edder haya sido seleccionado, podr\u00e1 avanzar a la siguiente actividad.
