--- a/lams_tool_leader/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:34:44 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:44:54 CST 2017 
  
 #=================== labels for Leader selection =================# 
 
@@ -55,9 +55,10 @@ label.refresh  =Frisk opp
 label.waiting.for.leader  =Vent til en er blitt leder
 label.manage.leaders  =Administrere ledere
 label.plese.select.leaders  =Vennligst velg leder
-label.no.leader.yet  =Ingen leder er valgt enn\u00e5. N\u00e5r en leder er valgt, vil du kunne fortsette til neste aktivitet
 heading.leader  =Gruppe leder
 monitoring.label.group  =Gruppe
+label.no.leader.yet.title  =Det er enda ikke valgt en leder
+label.no.leader.yet.body  =Etter at det er valgt en leder s\u00e5 kan du fortsette til neste aktivitet
 
 
-#======= End labels: Exported 52 labels for no NO =====
+#======= End labels: Exported 53 labels for no NO =====
