LDEV-4054: Updating translations
Updating Greek and Norwegian

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:35:40 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:46:13 CST 2017 
  
 #=================== labels for Scratchie =================# 
 
@@ -202,6 +202,13 @@ label.waiting.for.leader.submit.notebook  =Tidsbegrensningen som er satt av inst
 label.waiting.for.leader.submit.burning.questions  =Tidsgrensen som er definert av instrukt\u00f8rener utl\u00f8pt.Vennligst vent til en gruppeleder sender inn et haste-sp\u00f8rsm\u00e5l
 label.authoring.advanced.shuffle.items  =Stokk om sp\u00f8rsm\u00e5l
 label.summary.downloaded  =Excel fil erlastet ned
+label.number.groups.finished  =Antall grupper som er ferdig
+label.graph.help  =Klikk p\u00e5 stolpediagrammet i grafen(e) nedenfor og zoom deg inn og ut ved \u00e5  benytte musen. Zoomer du deg inn, s\u00e5 vil det gr\u00e5 feltet nederst beveges til h\u00f8yre eller benstre for \u00e5 vise deg karakteromr\u00e5det.
+label.lowest.mark  =Laveste karakter:
+label.highest.mark  =H\u00f8yeste karakter:
+label.marks  =Karakterer
+label.number.groups.in.mark.range  =Antall grupper i karakteromr\u00e5det
+label.average.mark  =Gjennomsnitt karakter
 
 
-#======= End labels: Exported 196 labels for no NO =====
+#======= End labels: Exported 203 labels for no NO =====
