LDEV-4054: Updating translations
Updating English and Spanish for various projects

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:26:43 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:29:50 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -725,6 +725,13 @@ label.course.groups.name.not.unique  =Course grouping with such name already exi
 label.save.as.course.grouping.hint  =You can save the groups as "Course groupings" so it can be used in other lessons as well. If the groups are just specifically for this lesson, you might not want to do this. Otherwise, click the button to give them a name and reuse them later.
 label.advanced.settings  =Advanced settings
 audit.delete.portrait  =Portrait for user {0} {1}({2}) deleted. Portrait Id was {3}.
+authoring.fla.weights.menu  =Weights
+authoring.fla.weights.title  =Weights on activity outputs
+authoring.fla.weights.activity  =Activity
+authoring.fla.weights.output  =Output
+authoring.fla.weights.weight  =Weight
+authoring.fla.weights.sum  =Sum
+authoring.fla.weights.sum.error  =Output weights do not sum up to 100%. Adjust them in Weights dialog.
 
 
-#======= End labels: Exported 719 labels for en AU =====
+#======= End labels: Exported 726 labels for en AU =====
