--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Feb 24 19:32:01 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:27:02 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -104,6 +104,15 @@ gradebook.monitor.show.dates  =Mostrar fechas
 gradebook.monitor.hide.dates  =Esconder fechas
 gradebook.export.excel  =Exportar calificaciones
 label.select.lessons.to.export  =Seleccione lecciones a exportar
+label.marks  =Calificaci\u00f3n
+label.number.learners.in.mark.range  =Estudiantes en este rango de calificaci\u00f3n
+label.show.marks.chart  =Mostrar gr\u00e1fico
+label.hide.marks.chart  =Esconder gr\u00e1fico
+gradebook.summary.activity.marks  =Sumatoria
+label.simplified.export  =Reporte simplificado (solo calificaciones)
+label.button.show.weights  =Mostrar ponderaci\u00f3n
+label.button.hide.weights  =Ocultar ponderaci\u00f3n
+label.weights.title  =Ponderaci\u00f3n de calificaciones
 
 
-#======= End labels: Exported 98 labels for es ES =====
+#======= End labels: Exported 107 labels for es ES =====
