--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:38:21 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:28:52 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -405,6 +405,8 @@ tour.progress.email.confure.content  =Set up the dates to automatically send ema
 error.date.in.past  =Selected date is in the past.
 audit.lesson.removed.permanently  =Lesson "{0}" ({1}) removed permanently.
 audit.lesson.status.changed  =Lesson "{0}" ({1}) status changed from "{2}" to "{3}"
+tour.gradebook.show.weight  =Show Weights
+tour.gradebook.show.weight.content  =Show/hide the activity weights used for marking this lesson.
 
 
-#======= End labels: Exported 399 labels for en AU =====
+#======= End labels: Exported 401 labels for en AU =====
