--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Oct 06 17:59:14 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:27:02 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -109,6 +109,10 @@ label.number.learners.in.mark.range  =Number of learners in mark range
 label.show.marks.chart  =Show marks chart
 label.hide.marks.chart  =Hide marks chart
 gradebook.summary.activity.marks  =Summary for activity marks
+label.simplified.export  =Simplified Export (only scores)
+label.button.show.weights  =Show Weights
+label.button.hide.weights  =Hide Weights
+label.weights.title  =Weights on activity outputs
 
 
-#======= End labels: Exported 103 labels for en AU =====
+#======= End labels: Exported 107 labels for en AU =====
