LDEV-4443: warning when editing activity that has been already used.
Currently when editing an assessment or voting activity in monitor, if an answer is changed, the data associated with that question is removed.

So if students have already completed the activity, their answers/marks will be removed and will shown as not answered.

We currently give no warning to monitors when they do this, so we should.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:43:50 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Oct 16 03:14:44 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -175,7 +175,6 @@ label.monitoring.question.summary.penalty  =Penalty
 label.monitoring.question.summary.average.mark  =Average mark
 label.monitoring.question.summary.group  =Group:
 label.monitoring.question.summary.ok  =Ok
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable.
 output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts made by user
@@ -316,6 +315,7 @@ label.average.mark  =Average mark
 label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
+message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
 
 
 #======= End labels: Exported 310 labels for en AU =====
