--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 20 02:27:54 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Oct 16 03:02:59 CST 2017 
  
 #=================== labels for Scratchie =================# 
 
@@ -31,7 +31,6 @@ monitoring.tab.statistics  =Statistic
 monitoring.tab.edit.activity  =Edit activity
 monitoring.label.group  =Group
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 export.title  =Export portfolio for Scratchie
 label.edit  =Edit
 label.finished  =Next activity
@@ -209,6 +208,7 @@ label.highest.mark  =Highest mark:
 label.marks  =Marks
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
+message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a leader has already answered, then the mark for the whole group for the modified question will be deleted permanently as it is assumed that the question has changed.
 
 
 #======= End labels: Exported 203 labels for en AU =====
