--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:22:11 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Oct 16 03:16:32 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -213,6 +213,7 @@ label.average.mark  =Average mark
 label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
+message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
 
 
-#======= End labels: Exported 207 labels for en AU =====
+#======= End labels: Exported 208 labels for en AU =====
