--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -104,6 +104,7 @@ gradebook.monitor.show.dates  =Show dates
 gradebook.monitor.hide.dates  =Hide dates
 gradebook.export.excel  =Export grades
 label.select.lessons.to.export  =Select lessons to export
+gradebook.export.desc =Select the lessons to export by clicking on the squares next to the lessons in Lesson View and then click 'Export'. You can select lessons across the different pages in the Lesson View area. 
 label.marks  =Marks
 label.number.learners.in.mark.range  =Number of learners in mark range
 label.show.marks.chart  =Show marks chart
@@ -113,6 +114,7 @@ label.simplified.export  =Simplified Export (only scores)
 label.button.show.weights  =Show Weights
 label.button.hide.weights  =Hide Weights
 label.weights.title  =Weights on activity outputs
+label.hide.lessons.to.export  =Hide lessons to export
 
 
 #======= End labels: Exported 107 labels for en AU =====
