LDEV-4408 adding missing labels
Adding missing label for deleting user sessions

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:39:50 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Oct 22 01:08:43 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -514,6 +514,7 @@ sysadmin.maintain.session.login  =Login
 sysadmin.maintain.session.id  =Session ID
 error.portrait.removal.failed  =Unable to delete portrait. See error file for details
 label.delete.portrait  =Delete portrait
+sysadmin.maintain.session.delete  =Delete
 
 
-#======= End labels: Exported 508 labels for en AU =====
+#======= End labels: Exported 509 labels for en AU =====
