LDEV-4447 Toggle Kumalive feature on sysadmin level

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -261,6 +261,7 @@ config.xmpp.admin  =Chat server admin username
 config.xmpp.password  =Chat server admin password
 config.allow.direct.lesson.launch  =Allow direct lesson launch
 config.allow.live.edit  =Allow Live Edit
+config.allow.kumalive  =Allow Kumalive
 config.ldap.provisioning.enabled  =Enable provisioning
 config.ldap.provider.url  =LDAP server URL
 config.ldap.security.authentication  =Authentication mechanism
