--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -460,6 +460,7 @@ tool.groups.remove.confirm  =Are you sure you want to remove this group?
 tool.groups.group.name.error  =A group name can not be blank
 tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
+config.kumalive.enable  =Enable Kumalive
 sysadmin.extGroupsUrl  =External groups URL
 server.config.title  =Server configuration
 server.monitor.title  =Server monitoring
