LDEV-4452 Prompt on overwriting unsaved changes in Authoring

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -519,7 +519,7 @@ authoring.fla.import.dialog.title  =Import Learning Design
 authoring.fla.import.part.dialog.title  =Import activities
 authoring.fla.run.sequences.folder  =<fmt:message key="label.tab.lesson.sequence.folder" />
 authoring.fla.arrange.confirm  =There are annotations on the canvas.\\n\ They will be not arranged automatically, you will have to adjust them manually later.\\n\ Do you want to continue?
-authoring.fla.clear.canvas.confirm  =Are you sure you want to remove all existing elements?
+authoring.fla.clear.canvas.confirm  =You have got unsaved changes. They will be lost. Do you want to continue?
 authoring.fla.branching.start.place.prompt  =Place the branching point
 authoring.fla.branching.end.place.prompt  =Place the converge point
 authoring.fla.annotation.region.place.prompt  =Click and hold to start drawing an annotation region
