LDEV-4453 Add "gradebook on lesson complete" field to Lesson

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -340,6 +340,7 @@ label.tab.advanced.details  =Details
 label.tab.advanced.intro.enable  =Enable lesson intro
 label.tab.advanced.intro.description  =Description:
 label.tab.advanced.intro.image  =Display design image
+label.tab.advanced.field.gradebook.complete =Display activity scores on completion
 label.tab.advanced.section.advanced  =Advanced options
 label.tab.advanced.field.monitor  =Start in Monitor
 label.tab.advanced.field.liveedit  =Enable Live Edit
