LDEV-4451 Display confidence levels in Scratchie
Add ability to Scratchie to display what options the individual students
have had in the individual assessment. 
Add advanced option to Scratchie - 'Show confidences' and then list
activites from the sequence to choose from (skip branching or use only
the current branch if inside of it).

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -210,5 +210,9 @@ label.marks  =Marks
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
 
+label.show.confidence.level  =Show confidence levels from the following activity
+label.no.confidence.levels.activities  =There are no activities with confidence levels to choose from.
+label.save.learning.design  =In order to select activity with  confidence levels please save your sequence first.
+
 
 #======= End labels: Exported 203 labels for en AU =====
