LDEV-4451 Ability to save confidence levels in MCQ
And also return them to Scratchie on request.

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -214,5 +214,8 @@ label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
 
+label.enable.confidence.levels  =Enable confidence levels
+label.what.is.your.confidence.level  =How confident you are answering this question?
+label.confidence  =Confidence
 
 #======= End labels: Exported 207 labels for en AU =====
