--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -184,9 +184,8 @@ label.authoring.export.qti  =Export IMS QTI
 label.scratchie.options  =Question options
 label.activity.completion  =End of activity
 label.authoring.advanced.burning.questions  =Option for burning questions
-label.continue.burning.questions  =Continue with burning questions
 label.burning.questions  =Burning questions
-label.burning.question  =Burning question
+label.burning.question  =Burning question?
 label.time.limit  =Time limit (minutes)
 label.countdown.time.left  =Time left
 label.time.is.over  =Time is over. Processing your answers...
@@ -198,7 +197,6 @@ label.unlike  =Unlike
 label.general.burning.question  =General burning question
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he commences it.
 label.waiting.for.leader.submit.notebook  =Time limit set by teacher is expired. Please wait until a group leader submits notebook.
-label.waiting.for.leader.submit.burning.questions  =Time limit set by teacher is expired. Please wait until a group leader submits burning questions.
 label.authoring.advanced.shuffle.items  =Shuffle questions
 label.summary.downloaded  =Excel file downloaded.
 label.number.groups.finished  =Number of groups finished
@@ -213,6 +211,8 @@ message.monitoring.edit.activity.warning  =Warning: if you edit and modify a que
 label.show.confidence.level  =Show confidence levels from the following activity
 label.no.confidence.levels.activities  =There are no activities with confidence levels to choose from.
 label.save.learning.design  =In order to select activity with  confidence levels please save your sequence first.
+
+label.burning.questions.autosaved  =Burning questions autosaved
 
 
 #======= End labels: Exported 203 labels for en AU =====
