LDEV-4453 Add gradebook on lesson complete front end

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -11,6 +11,8 @@ error.title  =Error occured
 message.activity.loading  =The next task is loading. Please wait....
 message.lesson.finished  =Congratulations, {0}, you have finished.
 message.lesson.finishedCont  =You have now completed the {0} lesson. You can return at anytime to this lesson and revisit and review activities by double clicking on the round icons in progress bar. You can now close this window.
+message.lesson.finished.report.load.error =Error while loading data for report
+message.lesson.finished.ok =OK
 label.next.button  =Next
 label.finish.button  =Next Activity
 message.activity.parallel.partialComplete  =You have to complete the other task before progressing to the next activity....
@@ -149,4 +151,9 @@ message.kumalive.report.load.error =Error while loading data for report
 button.kumalive.ok =OK
 button.kumalive.report.export.all =Export all
 button.kumalive.report.export.selected =Export selected
+gradebook.columntitle.mark  =Mark
+gradebook.columntitle.activity  =Activity
+gradebook.columntitle.averageMark  =Average mark
+gradebook.columntitle.progress  =Progress
+gradebook.lesson.complete =Grades for this lesson
 #======= End labels: Exported 102 labels for en AU =====
