LDEV-4449 Course gradebook exports include weighting

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -115,6 +115,6 @@ label.button.show.weights  =Show Weights
 label.button.hide.weights  =Hide Weights
 label.weights.title  =Weights on activity outputs
 label.hide.lessons.to.export  =Hide lessons to export
-
+label.activity.marks.weighted = (Activity Marks Weighted)
 
 #======= End labels: Exported 107 labels for en AU =====
