--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -213,6 +213,10 @@ label.no.confidence.levels.activities  =There are no activities with confidence 
 label.save.learning.design  =In order to select activity with  confidence levels please save your sequence first.
 
 label.burning.questions.autosaved  =Burning questions autosaved
+label.change.marking.allocation  =Change marking allocation
+label.change.marking.allocation.warning  =Attention: changing marking allocation will affect the way marks get calculated.
+label.modify.default.marking  =Modify default marking
+
 
 
 #======= End labels: Exported 203 labels for en AU =====
