LDEV-4445 Question page in monitor has portraits

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -316,6 +316,7 @@ label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
 message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
+label.hide.name.column  =Hide name column
 
 
 #======= End labels: Exported 310 labels for en AU =====
