LDEV-4453 Add "Your mark" in lesson complete gradebook

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -156,4 +156,5 @@ gradebook.columntitle.activity  =Activity
 gradebook.columntitle.averageMark  =Average mark
 gradebook.columntitle.progress  =Progress
 gradebook.lesson.complete =Grades for this lesson
+gradebook.learner.lesson.mark =Your mark
 #======= End labels: Exported 102 labels for en AU =====
