LDEV-4456 Warn users when there is no questions in question list

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -320,6 +320,7 @@ message.monitoring.edit.activity.warning  =Warning: if you edit and modify a que
 label.enable.confidence.levels  =Enable confidence level
 label.what.is.your.confidence.level  =How confident are you of your answer?
 label.confidence  =Confidence
+label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
 
 
 #======= End labels: Exported 310 labels for en AU =====
