LDEV-4453: adding labels
Adding labels to central and learning

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:29:50 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:28:36 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -732,6 +732,7 @@ authoring.fla.weights.output  =Output
 authoring.fla.weights.weight  =Weight
 authoring.fla.weights.sum  =Sum
 authoring.fla.weights.sum.error  =Output weights do not sum up to 100%. Adjust them in Weights dialog.
+label.tab.advanced.field.gradebook.complete  =Display activity scores on completion
 
 
-#======= End labels: Exported 726 labels for en AU =====
+#======= End labels: Exported 727 labels for en AU =====
