--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:25:45 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:16:10 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -108,6 +108,14 @@ mynotes.add.new.current.lesson.button  =Add note this lesson
 label.group.confirm.header  =Confirm group selection
 label.group.confirm.button  =Confirm
 label.group.confirm.areyoujoining  =Are you joining
+message.lesson.finished.report.load.error  =Error while loading data for report
+message.lesson.finished.ok  =OK
+gradebook.columntitle.mark  =Score
+gradebook.columntitle.activity  =Activity
+gradebook.columntitle.averageMark  =Average score
+gradebook.columntitle.progress  =Progress
+gradebook.lesson.complete  =Score for this lesson
+gradebook.learner.lesson.mark  =Your score
 
 
-#======= End labels: Exported 102 labels for en AU =====
+#======= End labels: Exported 110 labels for en AU =====
