--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:25:45 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:16:10 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -11,8 +11,6 @@ error.title  =Error occured
 message.activity.loading  =The next task is loading. Please wait....
 message.lesson.finished  =Congratulations, {0}, you have finished.
 message.lesson.finishedCont  =You have now completed the {0} lesson. You can return at anytime to this lesson and revisit and review activities by double clicking on the round icons in progress bar. You can now close this window.
-message.lesson.finished.report.load.error =Error while loading data for report
-message.lesson.finished.ok =OK
 label.next.button  =Next
 label.finish.button  =Next Activity
 message.activity.parallel.partialComplete  =You have to complete the other task before progressing to the next activity....
@@ -110,51 +108,14 @@ mynotes.add.new.current.lesson.button  =Add note this lesson
 label.group.confirm.header  =Confirm group selection
 label.group.confirm.button  =Confirm
 label.group.confirm.areyoujoining  =Are you joining
-label.kumalive.rubric.name =Enter rubric name
-label.kumalive.rubric.up =Move rubric up
-label.kumalive.rubric.down =Move rubric down
-label.kumalive.rubric.delete =Delete rubric
-label.kumalive.rubric.choose =Rubrics to use
-label.kumalive.title =Kumalive:
-label.kumalive.wait.start =Wait for a teacher to start Kumalive
-label.kumalive.name.enter =Enter a name for a new Kumalive
-button.kumalive.create =Create
-button.kumalive.finish.kumalive =Finish Kumalive
-button.kumalive.ask =Ask a question
-button.kumalive.finish.question =Finish question
-button.kumalive.raise =Raise hand
-button.kumalive.putdown =Put hand down
-label.kumalive.raised.hands =Raised hands
-label.kumalive.learners =Learners
-label.kumalive.teacher =Teacher
-label.kumalive.finish.speak =Finish speaking
-label.kumalive.mark.great =Great!
-label.kumalive.mark.ok =Just OK
-label.kumalive.mark.bad =Not so good
-message.kumalive.finish.kumalive =Kumalive is finished. The window will close.
-message.kumalive.finish.kumalive.confirm =Are you sure you want to finish this Kumalive?
-message.kumalive.speak.not.raised.hand =Do you want to make a speaker a learner who did not raise hand?
-label.kumalive.closed =You have got no connection with Kumalive. Try closing this window and opening it again.
-label.kumalive.report.full.name =Name
-label.kumalive.report.sheet.header =Kumalive report for {0}
-label.kumalive.report.sheet.header.learners =Learners summary
-label.kumalive.report.name =Kumalive name
-label.kumalive.report.mark.none =No marks
-label.kumalive.report.mark =Marks
-label.kumalive.report.first.name =First name
-label.kumalive.report.last.name =Last name
-label.kumalive.report.login =Login
-label.kumalive.report.attempt =Attempt
-label.kumalive.report.average =Average
-label.kumalive.report.time =Time
-message.kumalive.report.load.error =Error while loading data for report
-button.kumalive.ok =OK
-button.kumalive.report.export.all =Export all
-button.kumalive.report.export.selected =Export selected
-gradebook.columntitle.mark  =Mark
+message.lesson.finished.report.load.error  =Error while loading data for report
+message.lesson.finished.ok  =OK
+gradebook.columntitle.mark  =Score
 gradebook.columntitle.activity  =Activity
-gradebook.columntitle.averageMark  =Average mark
+gradebook.columntitle.averageMark  =Average score
 gradebook.columntitle.progress  =Progress
-gradebook.lesson.complete =Grades for this lesson
-gradebook.learner.lesson.mark =Your mark
-#======= End labels: Exported 102 labels for en AU =====
+gradebook.lesson.complete  =Score for this lesson
+gradebook.learner.lesson.mark  =Your score
+
+
+#======= End labels: Exported 110 labels for en AU =====
