LDEV-4366: adding labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:28:36 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Nov 08 21:38:47 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -733,6 +733,11 @@ authoring.fla.weights.weight  =Weight
 authoring.fla.weights.sum  =Sum
 authoring.fla.weights.sum.error  =Output weights do not sum up to 100%. Adjust them in Weights dialog.
 label.tab.advanced.field.gradebook.complete  =Display activity scores on completion
+index.kumalive  =Kumalive
+index.kumalive.tooltip  =Enter a live lesson
+index.kumalive.enter.learner  =Enter as a learner
+index.kumalive.report  =Reports
+index.kumalive.rubric  =Rubrics management
 
 
-#======= End labels: Exported 727 labels for en AU =====
+#======= End labels: Exported 732 labels for en AU =====
