LDEV-4453 Mark chosen activity outputs as weightable
Activity outputs without max score are not eligible for weighting as we
can not calculate percent in which the activity is completed. They must
not appear in weighting dialog and they must always have 0% weight.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -732,6 +732,7 @@ authoring.fla.weights.output  =Output
 authoring.fla.weights.weight  =Weight
 authoring.fla.weights.sum  =Sum
 authoring.fla.weights.sum.error  =Output weights do not sum up to 100%. Adjust them in Weights dialog.
+authoring.fla.weights.none =No activities with weightable gradebook output
 label.tab.advanced.field.gradebook.complete  =Display activity scores on completion
 index.kumalive  =Kumalive
 index.kumalive.tooltip  =Enter a live lesson
