LDEV-4460 Print page with all responses and comments
Monitor now has a printable page with all the responses and 
comments for one question for one session/group.

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -255,5 +255,7 @@ label.words.required  =Words required
 label.other.options  =More settings
 label.allow.review.other.responses  =Allow review other responses?
 
+label.username  =Username
+label.fullname =Full Name
 
 #======= End labels: Exported 249 labels for en AU =====
