LDEV-4460: Adding labels

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:05:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 09 20:36:09 CST 2017 
  
 #=================== labels for Q&A =================# 
 
@@ -147,6 +147,7 @@ error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition.no.questions.selected  =There are no questions selected. Please select at least one.
 error.condition  =Error creating condition.
 output.desc.user.answers.output.definition.qa  =Answers contain certain words
+user.answers.output.definition.qa.default.condition  =First answer contains word "LAMS"
 textsearch.heading  =Answers that...
 textsearch.all.words  =have all these words:
 textsearch.phrase  =have this exact wording or phrase:
@@ -254,8 +255,8 @@ label.notifications  =Notifications
 label.words.required  =Words required
 label.other.options  =More settings
 label.allow.review.other.responses  =Allow review other responses?
-
 label.username  =Username
-label.fullname =Full Name
+label.fullname  =Fullname
 
-#======= End labels: Exported 249 labels for en AU =====
+
+#======= End labels: Exported 251 labels for en AU =====
