--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:05:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 09 20:36:09 CST 2017 
  
 #=================== labels for Q&A =================# 
 
@@ -255,6 +255,8 @@ label.notifications  =Notifications
 label.words.required  =Words required
 label.other.options  =More settings
 label.allow.review.other.responses  =Allow review other responses?
+label.username  =Username
+label.fullname  =Fullname
 
 
-#======= End labels: Exported 249 labels for en AU =====
+#======= End labels: Exported 251 labels for en AU =====
