--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:05:09 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 09 20:36:08 CST 2017 
  
 #=================== labels for Q&A =================# 
 
@@ -255,6 +255,8 @@ label.notifications  =Notificaciones
 label.words.required  =Palabras requeridas
 label.other.options  =M\u00e1s opciones
 label.allow.review.other.responses  =Habilitar revisi\u00f3n de respuestas
+label.username  =Usuario
+label.fullname  =Nombre completo
 
 
-#======= End labels: Exported 249 labels for es ES =====
+#======= End labels: Exported 251 labels for es ES =====
