--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -137,6 +137,7 @@ email.notifications.course.notifications  =Course notifications: {0}
 email.notifications.user.name  =User name [login]
 email.notifications.lesson.name  =Lesson name
 email.notifications.send  =Send
+email.notifications.message.header =Message:
 email.notifications.user.search.property.0  =Are assigned to this lesson
 email.notifications.user.search.property.1  =Haven't finished this lesson
 email.notifications.user.search.property.2  =Have finished this lesson
@@ -158,11 +159,17 @@ email.notifications.emails.successfully.sent  =Emails have been successfully sen
 advanced.tab.enable.lesson.notifications  =Enable lesson notifications
 email.notifications.by.this.date  =By this date:
 email.notifications.emails.successfully.scheduled  =Emails have been successfully scheduled to be sent on specified date.
-email.notifications.scheduled.messages.list  =List of scheduled emails
+email.notifications.scheduled.messages.button =Scheduled
+email.notifications.scheduled.messages.list  =List of sheduled emails
 email.notifications.scheduled.messages.list.scheduled.date  =Scheduled date
 email.notifications.scheduled.messages.list.email.body  =Email body
 email.notifications.scheduled.messages.list.notify.sudents.that  =Notify learners that
 email.notifications.scheduled.messages.list.back  =Back to notifications
+email.notifications.archived.messages.button =Archived
+email.notifications.archived.messages.list  =List of archived emails
+email.notifications.archived.messages.list.sent.date =Sent on
+email.notifications.archived.messages.list.sent.count =Sent to
+email.notifications.archived.messages.list.learners =learners
 email.notifications.table.now  =Now
 email.notifications.table.schedule  =Schedule
 email.notifications.button.schedule  =Schedule
