LDEV-4449: adding label

--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Oct 11 21:27:02 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Nov 13 17:32:57 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -113,6 +113,9 @@ label.simplified.export  =Simplified Export (only scores)
 label.button.show.weights  =Show Weights
 label.button.hide.weights  =Hide Weights
 label.weights.title  =Weights on activity outputs
+gradebook.export.desc  =Select the lessons to export by clicking on the squares next to the lessons in Lesson View and then click 'Export'. You can select lessons across the different pages in the Lesson View area.
+label.hide.lessons.to.export  =Hide lessons to export
+label.activity.marks.weighted  =(Activity Marks Weighted)
 
 
-#======= End labels: Exported 107 labels for en AU =====
+#======= End labels: Exported 110 labels for en AU =====
