--- a/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 17 13:51:49 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Nov 13 17:32:09 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -113,6 +113,8 @@ label.simplified.export  =\u0391\u03c0\u03bb\u03bf\u03c0\u03bf\u03b9\u03b7\u03bc
 label.button.show.weights  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b2\u03b1\u03c1\u03ce\u03bd
 label.button.hide.weights  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b2\u03b1\u03c1\u03ce\u03bd
 label.weights.title  =\u0392\u03ac\u03c1\u03b7 \u03c3\u03c4\u03b9\u03c2 \u03b5\u03be\u03cc\u03b4\u03bf\u03c5\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2\u03b5
+gradebook.export.desc  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03c0\u03bf\u03c5 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b5\u03be\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03ba\u03ac\u03bd\u03bf\u03bd\u03c4\u03b1\u03c2 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03b1 \u03c4\u03b5\u03c4\u03c1\u03ac\u03b3\u03c9\u03bd\u03b1 \u03b4\u03af\u03c0\u03bb\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03c3\u03c4\u03b7\u03bd \u03c0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2 \u03ba\u03b1\u03b9 \u03c3\u03c4\u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1 \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03b7\u03bd \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae '\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae'. \u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03b5\u03c4\u03b5 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b9\u03c2 \u03c0\u03bf\u03bb\u03bb\u03ad\u03c2 \u03c3\u03b5\u03bb\u03af\u03b4\u03b5\u03c2 \u03c3\u03c4\u03b7\u03bd \u03c0\u03b5\u03c1\u03b9\u03bf\u03c7\u03ae \u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2.
+label.hide.lessons.to.export  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd \u03b3\u03b9\u03b1 \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
 
 
-#======= End labels: Exported 107 labels for el GR =====
+#======= End labels: Exported 109 labels for el GR =====
