LDEV-4459 Export archived email notification

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -170,6 +170,8 @@ email.notifications.archived.messages.list  =List of archived emails
 email.notifications.archived.messages.list.sent.date =Sent on
 email.notifications.archived.messages.list.sent.count =Sent to
 email.notifications.archived.messages.list.learners =learners
+email.notifications.archived.export.button =Export
+email.notifications.archived.export.sheet.name =Notification
 email.notifications.table.now  =Now
 email.notifications.table.schedule  =Schedule
 email.notifications.button.schedule  =Schedule
