LDEV-4436 Add new config setting: display learner's portrait
It controls whether learner's portrait should be displayed in a progress
bar.

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -516,5 +516,7 @@ error.portrait.removal.failed  =Unable to delete portrait. See error file for de
 label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
 
+config.display.portrait  =Display learner's portrait in a progress bar
+
 
 #======= End labels: Exported 509 labels for en AU =====
