LDEV-4436: adding label to i18n

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Oct 22 01:08:43 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 16 02:41:54 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -261,7 +261,6 @@ config.xmpp.admin  =Chat server admin username
 config.xmpp.password  =Chat server admin password
 config.allow.direct.lesson.launch  =Allow direct lesson launch
 config.allow.live.edit  =Allow Live Edit
-config.allow.kumalive  =Allow Kumalive
 config.ldap.provisioning.enabled  =Enable provisioning
 config.ldap.provider.url  =LDAP server URL
 config.ldap.security.authentication  =Authentication mechanism
@@ -460,7 +459,6 @@ tool.groups.remove.confirm  =Are you sure you want to remove this group?
 tool.groups.group.name.error  =A group name can not be blank
 tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
-config.kumalive.enable  =Enable Kumalive
 sysadmin.extGroupsUrl  =External groups URL
 server.config.title  =Server configuration
 server.monitor.title  =Server monitoring
@@ -517,6 +515,7 @@ sysadmin.maintain.session.id  =Session ID
 error.portrait.removal.failed  =Unable to delete portrait. See error file for details
 label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
+config.display.portrait  =Display learner's portrait in a progress bar
 
 
-#======= End labels: Exported 509 labels for en AU =====
+#======= End labels: Exported 510 labels for en AU =====
