--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:39:51 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 16 02:39:42 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -280,8 +280,8 @@ config.ldap.only.one.org  =\u039c\u03cc\u03bd\u03bf \u039c\u03af\u03b1 \u039f\u0
 config.ldap.encrypt.password.from.browser  =\u039a\u03c1\u03c5\u03c0\u03c4\u03bf\u03b3\u03c1\u03ac\u03c6\u03b7\u03c3\u03b7 \u039a\u03c9\u03b4\u03b9\u03ba\u03bf\u03cd \u03b1\u03c0\u03cc \u03c4\u03bf \u03a0\u03c1\u03cc\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1 \u03a0\u03bb\u03bf\u03ae\u03b3\u03b7\u03c3\u03b7\u03c2 \u0399\u03c3\u03c4\u03bf\u03c3\u03b5\u03bb\u03af\u03b4\u03c9\u03bd
 config.ldap.search.results.page.size  =\u0391\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2 \u039c\u03b5\u03b3\u03ad\u03b8\u03bf\u03c5\u03c2 \u03a3\u03b5\u03bb\u03af\u03b4\u03c9\u03bd
 error.numeric  =\u03b4\u03ad\u03c7\u03b5\u03c4\u03b1\u03b9 \u03bc\u03cc\u03bd\u03bf \u03bc\u03ad\u03c7\u03c1\u03b9 {0} \u03b1\u03c1\u03b9\u03b8\u03bc\u03b7\u03c4\u03b9\u03ba\u03bf\u03cd\u03c2 \u03c7\u03b1\u03c1\u03b1\u03ba\u03c4\u03ae\u03c1\u03b5\u03c2
-label.users.in.system  ={0} \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03c3\u03c4\u03bf \u03c3\u03cd\u03c3\u03c4\u03b7\u03bc\u03b1
-label.users.in.group  ={0} \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03c3\u03c4\u03b7\u03bd \u03bf\u03bc\u03ac\u03b4\u03b1.
+label.users.in.system  ={0} \u03c3\u03c5\u03bd\u03b4\u03b5\u03b4\u03b5\u03bc\u03ad\u03bd\u03bf\u03b9 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03c3\u03c4\u03bf \u03c3\u03cd\u03c3\u03c4\u03b7\u03bc\u03b1
+label.users.in.group  ={0} \u03c7\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2 \u03c3\u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1/\u03bf\u03bc\u03ac\u03b4\u03b1.
 label.show  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
 label.groups  =\u03bf\u03bc\u03ac\u03b4\u03b5\u03c2
 label.subgroups  =\u03c5\u03c0\u03bf\u03bf\u03bc\u03ac\u03b4\u03b5\u03c2
@@ -514,6 +514,7 @@ sysadmin.maintain.session.login  =\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 sysadmin.maintain.session.id  =\u0391\u03bd\u03b1\u03b3\u03bd\u03c9\u03c1\u03b9\u03c3\u03c4\u03b9\u03ba\u03cc \u03c0\u03b5\u03c1\u03b9\u03cc\u03b4\u03bf\u03c5 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7\u03c2
 error.portrait.removal.failed  =\u0394\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03c5\u03bd\u03b1\u03c4\u03ae \u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03c5 \u03c0\u03bf\u03c1\u03c4\u03c1\u03b1\u03af\u03c4\u03bf\u03c5. \u0394\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c3\u03c6\u03b1\u03bb\u03bc\u03ac\u03c4\u03c9\u03bd \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2
 label.delete.portrait  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c0\u03bf\u03c1\u03c4\u03c1\u03b1\u03af\u03c4\u03bf\u03c5
+sysadmin.maintain.session.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 
 
-#======= End labels: Exported 508 labels for el GR =====
+#======= End labels: Exported 509 labels for el GR =====
