LDEV-4366: Adding label

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 16 02:41:54 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 16 04:33:12 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -516,6 +516,7 @@ error.portrait.removal.failed  =Unable to delete portrait. See error file for de
 label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
 config.display.portrait  =Display learner's portrait in a progress bar
+config.kumalive.enable  =Enable Kumalive
 
 
-#======= End labels: Exported 510 labels for en AU =====
+#======= End labels: Exported 511 labels for en AU =====
