LDEV-4454 Add Kumalive poll setup front end

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -157,6 +157,17 @@ message.kumalive.report.load.error  =Error while loading data for report
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
 button.kumalive.report.export.selected  =Export selected
-
-
+button.kumalive.poll =Quick poll
+label.kumalive.poll.question =Question (optional)
+label.kumalive.poll.question.tip =for example: Why is the sky blue?
+label.kumalive.poll.answer =Answers
+label.kumalive.poll.answer.true =True
+label.kumalive.poll.answer.false =False
+label.kumalive.poll.answer.positive =Positive
+label.kumalive.poll.answer.negative =Negative
+label.kumalive.poll.answer.yes =Yes
+label.kumalive.poll.answer.no =No
+label.kumalive.poll.answer.custom =Custom...
+label.kumalive.poll.answer.custom.tip ={Put} {each} {answer} {in} {curly} {brackets}
+button.kumalive.poll.start =Ask now!
 #======= End labels: Exported 151 labels for en AU =====
