LDEV-4454 Kumalive poll setup validation

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -169,5 +169,6 @@ label.kumalive.poll.answer.yes =Yes
 label.kumalive.poll.answer.no =No
 label.kumalive.poll.answer.custom =Custom...
 label.kumalive.poll.answer.custom.tip ={Put} {each} {answer} {in} {curly} {brackets}
+label.kumalive.poll.answer.custom.error.syntax =Custom answer syntax is incorrect. Example: {firs answer} {second answer}
 button.kumalive.poll.start =Ask now!
 #======= End labels: Exported 151 labels for en AU =====
