--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -157,7 +157,7 @@ message.kumalive.report.load.error  =Error while loading data for report
 button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
 button.kumalive.report.export.selected  =Export selected
-button.kumalive.poll =Quick poll
+button.kumalive.poll =Poll
 label.kumalive.poll.question =Question (optional)
 label.kumalive.poll.question.tip =for example: Why is the sky blue?
 label.kumalive.poll.answer =Answers
@@ -169,6 +169,12 @@ label.kumalive.poll.answer.yes =Yes
 label.kumalive.poll.answer.no =No
 label.kumalive.poll.answer.custom =Custom...
 label.kumalive.poll.answer.custom.tip ={Put} {each} {answer} {in} {curly} {brackets}
-label.kumalive.poll.answer.custom.error.syntax =Custom answer syntax is incorrect. Example: {firs answer} {second answer}
+label.kumalive.poll.answer.custom.error.syntax =Custom answer syntax is incorrect. Example: {first answer} {second answer}
+label.kumalive.poll.answer.custom.error.count =Maximum 10 answers allowed
 button.kumalive.poll.start =Ask now!
+button.kumalive.poll.vote =Vote
+button.kumalive.poll.finish =Finish
+message.kumalive.poll.finish.confirm =Are you sure you want to finish this poll?
+button.kumalive.poll.close =Close
+
 #======= End labels: Exported 151 labels for en AU =====
